@@ -52,6 +52,18 @@ define([
 
   const d = document;
 
+  // Remove the no-js class from the body
+  d.body.classList.remove('no-js');
+
+  // Set base URL
+  KorAP.URL = d.body.getAttribute('data-korap-url') || "";
+
+  // Get koralQuery response
+  const kqe = d.getElementById('koralQuery');
+  if (kqe !== null) {
+    KorAP.koralQuery = JSON.parse(kqe.getAttribute('data-koralquery') || "");
+  };
+  
   // Create suffix if KorAP is run in a subfolder
   KorAP.session = sessionClass.create(
     KorAP.URL.length > 0 ? 'kalamarJS-' + KorAP.URL.slugify() : 'kalamarJS'
