@@ -57,6 +57,9 @@ my $api = 'https://korap.ids-mannheim.de/api/';
     ## Require everything to be send via https only:
     # https_only => 1,
 
+    ## Override default content security policy
+    # cs_policy => "default-src '*';"
+
     ## Set proxy timeouts
     # proxy_inactivity_timeout => 120,
     # proxy_connect_timeout => 120,
