@@ -1,5 +1,6 @@
 0.41 2021-01-14
         - Introduce CORS headers to the proxy.
+        - Introduce Content Security Policy.
 
 0.40 2020-12-17
         - Modernize ES and fix in-loops.
